

add_executable(num_positive_negative_zero
	1_num_positive_negative_zero.cpp
)


add_executable(num_even_odd
	2_num_even_odd.cpp
)


add_executable(	vowel_consonant
	3_vowel_consonant.cpp
)

add_executable(	alphabet_no
	4_alphabet_no.cpp
)

add_executable(	largest_of_three_num
	5_largest_of_three_num.cpp
)

add_executable(	leap_year_or_not
	6_leap_year_or_not.cpp
)

add_executable(	print_hello_Ntimes
	7_print_hello_Ntimes.cpp
)


add_executable(	sum_N_natural_nums
	8_sum_N_natural_nums.cpp
)

add_executable(	sum_of_Knums_from_Nnums
	9_sum_of_Knums_from_Nnums.cpp
)

add_executable(	count_digits_num
	10_count_digits_num.cpp
)

